css/popup-TLoad.css
/* ... */
.popup-TLoad #tab3 #rowA7 {
    display: flex;
    top: 359px;
    position: absolute;
    gap: 5px;
    right: 86px;
}

.popup-TLoad #tab3 #rowB8 {
    display: flex;
    top: 408px;
    position: absolute;
    gap: 5px;
    right: 86px;
}

.popup-TLoad #tab3 #rowA9 {
    display: flex;
    top: 450px;
    position: absolute;
    gap: 5px;
    right: 86px;
}

.popup-TLoad #tab3 #rowB9 {
    display: flex;
    top: 485px;
    position: absolute;
    gap: 5px;
    right: 11px;
}

.popup-TLoad #tab3 img {
    margin-bottom: 45px;
}

.popup-TLoad #tab3 #btn-RowA1 {
    top: 25%;
    left: 21%;
}

.popup-TLoad #tab3 #btn-RowC1 {
    top: 25%;
    left: 78%;
}

.popup-TLoad #tab3 #btn-RowA2 {
    top: 33.9%;
    left: 21%;
}

.popup-TLoad #tab3 #btn-RowC2 {
    top: 33.5%;
    left: 78%;
}

.popup-TLoad #tab3 #btn-RowA3 {
    top: 42.5%;
    left: 21%;
}

.popup-TLoad #tab3 #btn-RowC3 {
    top: 42.1%;
    left: 78%;
}

.popup-TLoad #tab3 #btn-RowA4 {
    top: 51.5%;
    left: 21%;
}

.popup-TLoad #tab3 #btn-RowC4 {
    top: 51.0%;
    left: 78%;
}

.popup-TLoad #tab3 #btn-RowA5 {
    top: 60.5%;
    left: 21%;
}

.popup-TLoad #tab3 #btn-RowC5 {
    top: 60.0%;
    left: 78%;
}

.popup-TLoad #tab3 #btn-RowA6 {
    top: 69.5%;
    left: 21%;
}

.popup-TLoad #tab3 #btn-RowC6 {
    top: 69.1%;
    left: 78%;
}

.popup-TLoad #tab3 #btn-RowA7 {
    top: 77.9%;
    left: 21%;
}

.popup-TLoad #tab3 #btn-RowC7 {
    top: 77.5%;
    left: 78%;
}

.popup-TLoad #tab3 #btn-RowB8 {
    top: 86.9%;
    left: 47%;
}

.popup-TLoad #tab3 #btn-RowC8 {
    top: 86.9%;
    left: 78%;
}

.popup-TLoad #tab3 #btn-RowA9 {
    top: 95.5%;
    left: 21%;
}

.popup-TLoad #tab3 #btn-RowB9 {
    top: 95.5%;
    left: 47%;
}

.popup-TLoad #tab3 #btn-RowC9 {
    top: 95.5%;
    left: 78%;
}

.popup-TLoad #tab3 .legenda {
    display: flex;
    flex-direction: column;
    width: 85px;
    text-align: center;
    position: absolute;
    top: 44%;
    gap: 5px;
    left: 21px;
    z-index: 999;
}

.popup-TLoad #tab3 #Leg-Press {
    width: 80px;
    padding-bottom: 50px;
}

.popup-TLoad #tab4 #cargo-layout {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 300px;
}

/* .popup-TLoad #tab4 #cargo-layout div {
    background-color: #d1cccc;
    width: 100%;
    display: flex;
    justify-content: center;
    height: 30px;
    border-radius: 35px;
    flex-direction: column;
} */
.popup-TLoad #tab4 #cargo-layout input {
    border-radius: 7px;
    border-width: 1px;
    border-style: dotted;
    width: 108px;
    text-align: center;
}

.popup-TLoad #tab4 #cargo-layout #cargoImage {
    border-top-width: 1px;
    border-top-style: solid;
}

.popup-TLoad #tab4 #Info-fwd-cargo-arm {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 75px;
    background-color: #abdff6;
    height: 55px;
    border-radius: 7px;
}

.popup-TLoad #tab4 #Info-fwd-cargo-arm strong {
    text-align: center;
}

.popup-TLoad #tab4 #Info-fwd-cargo-arm input {
    width: 60px;
    text-align: center;
}

.popup-TLoad #tab4 #Info-rear-cargo-arm {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 75px;
    background-color: #abdff6;
    height: 55px;
    border-radius: 7px;
}

.popup-TLoad #tab4 #Info-rear-cargo-arm strong {
    text-align: center;
}

.popup-TLoad #tab4 #Info-rear-cargo-arm input {
    width: 60px;
    text-align: center;
}

.popup-TLoad #tab4 .toggle-row {
    border-top-style: none;
}

.popup-TLoad #tab1 #manual-load {
    width: 50%;
    margin-top: 10px;
    font-size: 18px;
    border-radius: 7px;
    border-width: 1px;
    border-style: ridge;
}

.popup-TLoad #tab4 #cargo-layout #grid {
    display: grid;
    grid-template-columns: 0fr 0fr;
    border-top-style: none;
    grid-template-rows: none 10px none;
    row-gap: 6px;
    border-bottom-style: none;
    margin-bottom: 50px;
    border-left-style: none;
    column-gap: 6px;
    align-items: center;
    gap: 6px;
}

.popup-TLoad #tab4 #cargo-layout #grid #fwd-values {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    margin-top: 55px;
}

.popup-TLoad #tab4 #cargo-layout #grid #fwd-values div {
    justify-content: space-between;
    display: flex;
}

.popup-TLoad #tab4 #cargo-layout #grid #fwd-values input {
    width: 70px;
    margin-bottom: 7px;
}

.popup-TLoad #tab4 #cargo-layout #grid #aft-values {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    border-top-style: none;
    margin-top: 66px;
}

.popup-TLoad #tab4 #cargo-layout #grid #aft-values div {
    justify-content: space-between;
    display: flex;
}

.popup-TLoad #tab4 #cargo-layout #grid #aft-values input {
    width: 70px;
    margin-bottom: 7px;
}

.popup-TLoad #tab4 #cargo-layout #grid #Warning {
    grid-area: 2 / 1 / 3 / 3;
    border-bottom-width: 1px;
    border-bottom-style: dashed;
    display: flex;
    justify-content: center;
}

.popup-TLoad #Warning #msg {
    color: #fd0000;
    text-align: center;
    visibility: hidden;
}

/* Layout geral */
.counter-row {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 12px 0;
    gap: 12px;
}

/* Texto das labels */
.counter-row label {
    width: 90px;
    font-weight: 500;
}

.counter-row .counter-input {
    width: 70px;
    text-align: center;
    font-weight: bold;
}

